@@ -1,3 +1,8 @@
+2002-02-26  Andrew Macleod  <amacleod@cygnus.com>
+
+	* elflink.h (elf_bfd_final_link): Don't crash on SHN_UNDEF local
+	dynsyms.
+
 2002-02-25  Alan Modra  <amodra@bigpond.net.au>
 
 	* elf64-ppc.c (ppc64_elf_check_relocs): Warning fix.
